fix api doc
