# src/model/locker.model.js
@@ -1,21 +1,28 @@
 import mongoose from 'mongoose'
 
-const LockerSchema = mongoose.Schema({
-  lockerId: {
-    type: Number,
-    required: true,
-    unique: true,
-    trim: true
-  },
+const LockerSchema = mongoose.Schema(
+  {
+    lockerId: {
+      type: Number,
+      required: true,
+      unique: true,
+      trim: true
+    },
 
-  availability: {
-    type: Boolean,
-    default: false,
-    required: true
-  },
+    availability: {
+      type: Boolean,
+      default: false,
+      required: true
+    },
 
-  username: {
-    type: String
-  }
-})
+    username: {
+      type: String
+    },
+
+    hashedPin: {
+      type: String
+    }
+  },
+  { timestamps: true }
+)
 export default mongoose.model('Locker', LockerSchema)
